make some preparation

--- a/article.html
+++ b/article.html
@@ -14,15 +14,12 @@
                 <header class="header --d-flex --align-items-center --bg-primary-subtle">
                     <div class="header__container --d-flex --fw-wrap">
                         <a class="header__logo" href="" class="--d-flex --fw-nowrap">
-                            <span class="fc-dark --fw-extra-bold">FIT</span>
-                            <span class="fc-dark --fw-semi-bold">WEEK</span>
+                            <img src="/images/design18/icons/logo.svg" alt="">
                         </a>
                         <h1 class="header__slogan fc-dark fs-condensed --fw-regular ff-open-sans">Das Magazin für Fitness, Gesundheit und Ernährung</h1>
                     </div>
                     <button type="button" class="header__fa-menu --d-flex --justify-content-space-between --flex-direction-column">
-                        <div></div>
-                        <div></div>
-                        <div></div>
+                        <img src="/images/design18/icons/menu.svg" alt="">
                     </button>
                 </header>
                 <nav class="nav --bg-primary-subtle">
