--- a/category.html
+++ b/category.html
@@ -14,15 +14,12 @@
                 <header class="header --d-flex --align-items-center --bg-primary-subtle">
                     <div class="header__container --d-flex --fw-wrap">
                         <a class="header__logo" href="" class="--d-flex --fw-nowrap">
-                            <span class="fc-dark --fw-extra-bold">FIT</span>
-                            <span class="fc-dark --fw-semi-bold">WEEK</span>
+                            <img src="/images/design18/icons/logo.svg" alt="">
                         </a>
                         <h1 class="header__slogan fc-dark fs-condensed --fw-regular ff-open-sans">Das Magazin für Fitness, Gesundheit und Ernährung</h1>
                     </div>
                     <button type="button" class="header__fa-menu --d-flex --justify-content-space-between --flex-direction-column">
-                        <div></div>
-                        <div></div>
-                        <div></div>
+                        <img src="/images/design18/icons/menu.svg" alt="">
                     </button>
                 </header>
                 <nav class="nav --bg-primary-subtle">
@@ -40,11 +37,9 @@
                 </nav>
                 <main>
                     <section class="header-2 row">  
-                        <h2 class="header-2__item --border-bottom --border-top">Skincare</h2>
+                        <h2 class="header-2__item --border-bottom --border-top">Fitness</h2>
                     </section>
-                    <section class="about row --border-bottom-mod">  
-                        <p>Während der Schwangerschaft durchlebt der Körper rasche physiologische Veränderungen, um sich auf die Geburt und Stillzeit vorzubereiten – das ist bekannt. Welche Frage bisher jedoch unbeantwortet blieb, ist die, was die weitreichenden hormonellen Veränderungen während der Schwangerschaft mit dem Gehirn machen. Ein Team von Neurowissenschaftlern an der UC Santa Barbara konnten nun mit der allerersten Karte des menschlichen Gehirns im Verlauf der Schwangerschaft Licht in diesen wenig erforschten Bereich bringen.</p>
-                    </section>
+                    
                     <section class="tags">  
                         <a href="" class="tags__item tags__item-mod">Body</a>
                         <a href="" class="tags__item tags__item-mod">Face</a>
@@ -67,9 +62,9 @@
                                 <img src="/images/design18/Fit Week/3 1.png" class="teaser__img --d-block" alt="">
                             </figure>
                             <div class="teaser__content">
-                                <p class="teaser__sub-title --d-block">Regelmäßige Scans</p>
-                                <p class="teaser__title --d-block">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
-                                <p class="teaser__desc">Während der Schwangerschaft durchlebt der Körper rasche physiologische Veränderungen, um sich auf die Geburt und Stillzeit vorzubereiten –</p>
+                                <p class="teaser__sub-title teaser__item__sub-title --d-block">Regelmäßige Scans</p>
+                                <p class="teaser__title --d-block">Das steckt hinter der „United let’s move“-Aktion</p>
+                                <p class="teaser__disc">Während der Schwangerschaft durchlebt der Körper rasche physiologische Veränderungen, um sich auf die Geburt und Stillzeit vorzubereiten –</p>
                             </div>
                         </a>
                         <a href="" class="teaser__item">
@@ -77,9 +72,9 @@
                                 <img src="/images/design18/Fit Week/2 1.png" class="teaser__img --d-block" alt="">
                             </figure>
                             <div class="teaser__content">
-                                <p class="teaser__sub-title --d-block">Eine Woche kostenlos im Gym trainieren</p>
+                                <p class="teaser__sub-title teaser__item__sub-title --d-block">Regelmäßige Scans</p>
                                 <p class="teaser__title --d-block">Das steckt hinter der „United let’s move“-Aktion</p>
-                                <p class="teaser__desc">Während der Schwangerschaft durchlebt der Körper rasche physiologische Veränderungen, um sich auf die Geburt und Stillzeit vorzubereiten –</p>
+                                <p class="teaser__disc">Während der Schwangerschaft durchlebt der Körper rasche physiologische Veränderungen, um sich auf die Geburt und Stillzeit vorzubereiten –</p>
                             </div>
                         </a>
                         <a href="" class="teaser__item">
@@ -87,14 +82,70 @@
                                 <img src="/images/design18/Fit Week/1 1.png" class="teaser__img --d-block" alt="">
                             </figure>
                             <div class="teaser__content">
-                                <p class="teaser__sub-title --d-block">Studie zeigt</p>
-                                <p class="teaser__title --d-block">Die Vorteile von Vitamin-D-Supplementierung für den Stoffwechsel</p>
-                                <p class="teaser__desc">Während der Schwangerschaft durchlebt der Körper rasche physiologische Veränderungen, um sich auf die Geburt und Stillzeit vorzubereiten –</p>
+                                <p class="teaser__sub-title teaser__item__sub-title --d-block">Studie zeigt</p>
+                                <p class="teaser__title --d-block">Das steckt hinter der „United let’s move“-Aktion</p>
+                                <p class="teaser__disc">Während der Schwangerschaft durchlebt der Körper rasche physiologische Veränderungen, um sich auf die Geburt und Stillzeit vorzubereiten –</p>
                             </div>
                         </a>
                     </section>
-                    <section class="header-3 row --border-top --border-bottom">  
-                        <h3 class="header-3__item">Skincare ›</h3>
+                    <section class="header-4 header-4-mod row --border-top --border-bottom">  
+                        <h4 class="header-4__item --text-align-center">Weitere Themen</h4>
+                    </section>
+                    <section class="links">
+                        <a class="links__item">
+                            <div class="links__item-title">
+                                Regelmäßige Scans
+                            </div>
+                            <p class="links__item-disc">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
+                        </a>
+                        <a class="links__item">
+                            <div class="links__item-title">
+                                Regelmäßige Scans
+                            </div>
+                            <p class="links__item-disc">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
+                        </a>
+                        <a class="links__item">
+                            <div class="links__item-title">
+                                Regelmäßige Scans
+                            </div>
+                            <p class="links__item-disc">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
+                        </a>
+                        <a class="links__item">
+                            <div class="links__item-title">
+                                Regelmäßige Scans
+                            </div>
+                            <p class="links__item-disc">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
+                        </a>
+                        <a class="links__item">
+                            <div class="links__item-title">
+                                Regelmäßige Scans
+                            </div>
+                            <p class="links__item-disc">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
+                        </a>
+                        <a class="links__item">
+                            <div class="links__item-title">
+                                Regelmäßige Scans
+                            </div>
+                            <p class="links__item-disc">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
+                        </a>
+                        <a class="links__item">
+                            <div class="links__item-title">
+                                Regelmäßige Scans
+                            </div>
+                            <p class="links__item-disc">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
+                        </a>
+                        <a class="links__item">
+                            <div class="links__item-title">
+                                Regelmäßige Scans
+                            </div>
+                            <p class="links__item-disc">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
+                        </a>
+                        <a class="links__item">
+                            <div class="links__item-title">
+                                Regelmäßige Scans
+                            </div>
+                            <p class="links__item-disc">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
+                        </a>
                     </section>
                 </main>
               </div>
