--- a/home.html
+++ b/home.html
@@ -14,15 +14,12 @@
                 <header class="header --d-flex --align-items-center --bg-primary-subtle">
                     <div class="header__container --d-flex --fw-wrap">
                         <a class="header__logo" href="" class="--d-flex --fw-nowrap">
-                            <span class="fc-dark --fw-extra-bold">FIT</span>
-                            <span class="fc-dark --fw-semi-bold">WEEK</span>
+                            <img src="/images/design18/icons/logo.svg" alt="">
                         </a>
                         <h1 class="header__slogan fc-dark fs-condensed --fw-regular ff-open-sans">Das Magazin für Fitness, Gesundheit und Ernährung</h1>
                     </div>
                     <button type="button" class="header__fa-menu --d-flex --justify-content-space-between --flex-direction-column">
-                        <div></div>
-                        <div></div>
-                        <div></div>
+                        <img src="/images/design18/icons/menu.svg" alt="">
                     </button>
                 </header>
                 <nav class="nav --bg-primary-subtle">
@@ -40,9 +37,78 @@
                 </nav>
                 <main>
                     <section class="just-pic">  
-                        <figure class="just-pic__figure">
-                            <img src="/images/design18/Fit Week/gettyimages-1852076244_reihenhausgarten-gestalten 6.png" class="just-pic__img" alt="">
-                        </figure>
+                        <a href="">
+                            <figure class="just-pic__figure">
+                                <img src="/images/design18/Fit Week/main-img.png" class="just-pic__img" alt="">
+                            </figure>
+                            <div class="just-pic-content">
+                                <div class="just-pic-title">
+                                    Das steckt hinter der „United let’s
+                                </div>
+                                <p class="just-pic-disc">Beziehungspause - der Anfang vom Ende</p>
+                            </div>
+                        </a>
+                    </section>
+                    <section class="teaser row --d-flex --justify-content-space-between --fw-wrap">
+                        <a href="" class="teaser__item teaser__item-margin-mod">
+                            <figure class="teaser__figure">    
+                                <img src="/images/design18/Fit Week/3 1.png" class="teaser__img --d-block" alt="">
+                            </figure>
+                            <div class="teaser__content">
+                                <p class="teaser__sub-title teaser__item__sub-title teaser__item__sub-title --d-block">Regelmäßige Scans</p>
+                                <p class="teaser__title --d-block">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
+                            </div>
+                        </a>
+                        <a href="" class="teaser__item teaser__item-margin-mod">
+                            <figure class="teaser__figure">    
+                                <img src="/images/design18/Fit Week/2 1.png" class="teaser__img --d-block" alt="">
+                            </figure>
+                            <div class="teaser__content">
+                                <p class="teaser__sub-title teaser__item__sub-title teaser__item__sub-title --d-block">Regelmäßige Scans</p>
+                                <p class="teaser__title --d-block">Das steckt hinter der „United let’s move“-Aktion</p>
+                            </div>
+                        </a>
+                        <a href="" class="teaser__item teaser__item-margin-mod">
+                            <figure class="teaser__figure">    
+                                <img src="/images/design18/Fit Week/1 1.png" class="teaser__img --d-block" alt="">
+                            </figure>
+                            <div class="teaser__content">
+                                <p class="teaser__sub-title teaser__item__sub-title --d-block">Studie zeigt</p>
+                                <p class="teaser__title --d-block">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
+                            </div>
+                        </a>
+                    </section>
+                    <section class="add-todo">
+                        <a href=""><img src="/images/design18/add-ex.png" alt=""></a>
+                    </section>
+                    <section class="teaser teaser-mod-mobile row --d-flex --justify-content-space-between --fw-wrap">
+                        <a href="" class="teaser__item teaser__item-margin-none">
+                            <figure class="teaser__figure">    
+                                <img src="/images/design18/Fit Week/3 1.png" class="teaser__img --d-block" alt="">
+                            </figure>
+                            <div class="teaser__content">
+                                <p class="teaser__sub-title teaser__item__sub-title --d-block">Regelmäßige Scans</p>
+                                <p class="teaser__title --d-block">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
+                            </div>
+                        </a>
+                        <a href="" class="teaser__item teaser__item-margin-none">
+                            <figure class="teaser__figure">    
+                                <img src="/images/design18/Fit Week/2 1.png" class="teaser__img --d-block" alt="">
+                            </figure>
+                            <div class="teaser__content">
+                                <p class="teaser__sub-title teaser__item__sub-title teaser__item__sub-title --d-block">Regelmäßige Scans</p>
+                                <p class="teaser__title --d-block">Das steckt hinter der „United let’s move“-Aktion</p>
+                            </div>
+                        </a>
+                        <a href="" class="teaser__item teaser__item-margin-none">
+                            <figure class="teaser__figure">    
+                                <img src="/images/design18/Fit Week/1 1.png" class="teaser__img --d-block" alt="">
+                            </figure>
+                            <div class="teaser__content">
+                                <p class="teaser__sub-title teaser__item__sub-title --d-block">Studie zeigt</p>
+                                <p class="teaser__title --d-block">Das steckt hinter der „United let’s move“-Aktion</p>
+                            </div>
+                        </a>
                     </section>
                     <section class="header-4 row --border-top --border-bottom">  
                         <h4 class="header-4__item --text-align-center">FITWEEK folgen</h4>
@@ -59,38 +125,126 @@
                     <section class="header-3 row --border-top --border-bottom">  
                         <h3 class="header-3__item --text-align-center">Fitness ›</h3>
                     </section>
-                    <section class="tags">  
+                    <section class="tags tags-margin-mod">  
                         <a href="" class="tags__item">Laufen</a>
                         <a href="" class="tags__item">Workouts</a>
                         <a href="" class="tags__item">Ausdauertraining</a>
                     </section>
                     <section class="teaser row --d-flex --justify-content-space-between --fw-wrap">
-                        <a href="" class="teaser__item">
+                        <a href="" class="teaser__item teaser__item-margin-grid">
                             <figure class="teaser__figure">    
                                 <img src="/images/design18/Fit Week/3 1.png" class="teaser__img --d-block" alt="">
                             </figure>
                             <div class="teaser__content">
-                                <p class="teaser__sub-title --d-block">Regelmäßige Scans</p>
+                                <p class="teaser__sub-title teaser__item__sub-title --d-block">Regelmäßige Scans</p>
                                 <p class="teaser__title --d-block">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
                             </div>
                         </a>
-                        <a href="" class="teaser__item">
+                        <a href="" class="teaser__item teaser__item-margin-grid">
                             <figure class="teaser__figure">    
                                 <img src="/images/design18/Fit Week/2 1.png" class="teaser__img --d-block" alt="">
                             </figure>
                             <div class="teaser__content">
-                                <p class="teaser__sub-title --d-block">Eine Woche kostenlos im Gym trainieren</p>
+                                <p class="teaser__sub-title teaser__item__sub-title teaser__item__sub-title --d-block">Regelmäßige Scans</p>
                                 <p class="teaser__title --d-block">Das steckt hinter der „United let’s move“-Aktion</p>
                             </div>
                         </a>
-                        <a href="" class="teaser__item">
+                        <a href="" class="teaser__item teaser__item-margin-grid">
                             <figure class="teaser__figure">    
                                 <img src="/images/design18/Fit Week/1 1.png" class="teaser__img --d-block" alt="">
                             </figure>
                             <div class="teaser__content">
-                                <p class="teaser__sub-title --d-block">Studie zeigt</p>
-                                <p class="teaser__title --d-block">Die Vorteile von Vitamin-D-Supplementierung für den Stoffwechsel</p>
+                                <p class="teaser__sub-title teaser__item__sub-title --d-block">Studie zeigt</p>
+                                <p class="teaser__title --d-block">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
                             </div>
+                        </a>
+                    </section>
+                    <section class="teaser teaser-mod-mobile row --d-flex --justify-content-space-between --fw-wrap">
+                        <a href="" class="teaser__item teaser__item-margin-none">
+                            <figure class="teaser__figure">    
+                                <img src="/images/design18/Fit Week/3 1.png" class="teaser__img --d-block" alt="">
+                            </figure>
+                            <div class="teaser__content">
+                                <p class="teaser__sub-title teaser__item__sub-title --d-block">Regelmäßige Scans</p>
+                                <p class="teaser__title --d-block">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
+                            </div>
+                        </a>
+                        <a href="" class="teaser__item teaser__item-margin-none">
+                            <figure class="teaser__figure">    
+                                <img src="/images/design18/Fit Week/2 1.png" class="teaser__img --d-block" alt="">
+                            </figure>
+                            <div class="teaser__content">
+                                <p class="teaser__sub-title teaser__item__sub-title teaser__item__sub-title --d-block">Regelmäßige Scans</p>
+                                <p class="teaser__title --d-block">Das steckt hinter der „United let’s move“-Aktion</p>
+                            </div>
+                        </a>
+                        <a href="" class="teaser__item teaser__item-margin-none">
+                            <figure class="teaser__figure">    
+                                <img src="/images/design18/Fit Week/1 1.png" class="teaser__img --d-block" alt="">
+                            </figure>
+                            <div class="teaser__content">
+                                <p class="teaser__sub-title teaser__item__sub-title --d-block">Studie zeigt</p>
+                                <p class="teaser__title --d-block">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
+                            </div>
+                        </a>
+                    </section>
+                    <section class="header-4 row --border-top --border-bottom">  
+                        <h4 class="header-4__item --text-align-center">Weitere Themen</h4>
+                    </section>
+                    <section class="links">
+                        <a class="links__item">
+                            <div class="links__item-title">
+                                Regelmäßige Scans
+                            </div>
+                            <p class="links__item-disc">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
+                        </a>
+                        <a class="links__item">
+                            <div class="links__item-title">
+                                Regelmäßige Scans
+                            </div>
+                            <p class="links__item-disc">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
+                        </a>
+                        <a class="links__item">
+                            <div class="links__item-title">
+                                Regelmäßige Scans
+                            </div>
+                            <p class="links__item-disc">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
+                        </a>
+                        <a class="links__item">
+                            <div class="links__item-title">
+                                Regelmäßige Scans
+                            </div>
+                            <p class="links__item-disc">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
+                        </a>
+                        <a class="links__item">
+                            <div class="links__item-title">
+                                Regelmäßige Scans
+                            </div>
+                            <p class="links__item-disc">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
+                        </a>
+                        <a class="links__item">
+                            <div class="links__item-title">
+                                Regelmäßige Scans
+                            </div>
+                            <p class="links__item-disc">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
+                        </a>
+                        <a class="links__item">
+                            <div class="links__item-title">
+                                Regelmäßige Scans
+                            </div>
+                            <p class="links__item-disc">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
+                        </a>
+                        <a class="links__item">
+                            <div class="links__item-title">
+                                Regelmäßige Scans
+                            </div>
+                            <p class="links__item-disc">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
+                        </a>
+                        <a class="links__item">
+                            <div class="links__item-title">
+                                Regelmäßige Scans
+                            </div>
+                            <p class="links__item-disc">Studie zeigt, wie die Schwangerschaft das Gehirn der Mutter verändert</p>
                         </a>
                     </section>
                 </main>
